<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_vector"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_vector__1_"
            android:title="@string/menu_popular" />
        <item
            android:id="@+id/nav_random"
            android:icon="@drawable/ic_vector__2_"
            android:title="@string/menu_random" />

        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_vector__3_"
            android:title="@string/menu_liked" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_vector__4_"
            android:title="@string/menu_history" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_vector__5_"
            android:title="@string/menu_about" />
    </group>
</menu>