<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="uz.mobiler.wallpaperappg2122.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_blankFragment"
            app:destination="@id/blankFragment" />
    </fragment>

    <fragment
        android:id="@+id/blankFragment"
        android:name="uz.mobiler.wallpaperappg2122.ui.home.BlankFragment"
        android:label="fragment_blank"
        tools:layout="@layout/fragment_blank" >
        <action
            android:id="@+id/action_blankFragment_to_imageFragment"
            app:destination="@id/imageFragment" />
    </fragment>
    <fragment
        android:id="@+id/imageFragment"
        android:name="uz.mobiler.wallpaperappg2122.ImageFragment"
        android:label="Sanjar"
        tools:layout="@layout/fragment_image" />
    <fragment
        android:id="@+id/nav_popular"
        android:name="uz.mobiler.wallpaperappg2122.ui.popular.PopularFragment"
        android:label="@string/menu_popular"
        tools:layout="@layout/fragment_popular" >
        <action
            android:id="@+id/action_popularFragment_to_blankFragment"
            app:destination="@id/blankFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_random"
        android:name="uz.mobiler.wallpaperappg2122.ui.random.RandomFragment"
        android:label="@string/menu_random"
        tools:layout="@layout/fragment_random" >
        <action
            android:id="@+id/action_randomFragment_to_blankFragment"
            app:destination="@id/blankFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_favourites"
        android:name="uz.mobiler.wallpaperappg2122.ui.favourites.FavouritesFragment"
        android:label="@string/menu_liked"
        tools:layout="@layout/fragment_favourites" >
        <action
            android:id="@+id/action_favouritesFragment_to_blankFragment"
            app:destination="@id/blankFragment" />
    </fragment>
    <fragment
        android:id="@+id/popularFragment2"
        android:name="uz.mobiler.wallpaperappg2122.PopularFragment2"
        android:label="fragment_popular2"
        tools:layout="@layout/fragment_popular2" />
    <fragment
        android:id="@+id/randomFragment2"
        android:name="uz.mobiler.wallpaperappg2122.RandomFragment2"
        android:label="fragment_random2"
        tools:layout="@layout/fragment_random2" />
    <fragment
        android:id="@+id/favouriteFragment2"
        android:name="uz.mobiler.wallpaperappg2122.FavouriteFragment2"
        android:label="fragment_favourite2"
        tools:layout="@layout/fragment_favourite2" />
    <fragment
        android:id="@+id/imageFragment2"
        android:name="uz.mobiler.wallpaperappg2122.ImageFragment2"
        android:label="fragment_image2"
        tools:layout="@layout/fragment_image2" />
</navigation>